--- a/gameCenter/album.css
+++ b/gameCenter/album.css
@@ -158,7 +158,8 @@ body,html {
 .platform {
     padding: .6rem .15rem 0;
     width: 100%;
-    height: 2.8rem
+    height: 2.8rem;
+    box-sizing: border-box;
 }
 
 .platform label {
