--- a/foolday2017/index.css
+++ b/foolday2017/index.css
@@ -106,15 +106,24 @@ body,html {
     background-size: 1.78rem 0.26rem;
     background-position: 50%;
 }
+.page2 .center button {
+    width: 2.6rem;
+    height: 0.86rem;
+    border: none;
+    background-color: transparent;
+}
+.page2 .center {
+    text-align: center;
+}
 .page2 .center .again {
-    display: inline-block;
+    /*display: inline-block;*/
     width: 2.6rem;
     height: 0.86rem;
     background: url(./img/button1@2x.png) no-repeat;
     background-size: 2.6rem 0.86rem;
 }
 .page2 .center .share {
-    display: inline-block;
+    /*display: inline-block;*/
     width: 2.6rem;
     height: 0.86rem;
     margin-left: 0.2rem;
@@ -146,16 +155,25 @@ body,html {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 7.5rem;
-	height: 13.34rem;
+	width: 100%;
+	height: 100%;
 	background: url(./img/shine@2x.png) no-repeat;
-	background-size: 7.5rem 13.34rem;
+	background-size: 100%;
 	background-position: top;
 	background-position: 50%;
 	opacity: 0;
 	animation: change 0.8s ease-in-out;
+    -webkit-animation: change 0.8s ease-in-out;
 }
 @keyframes change {
+	0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 0.8;
+    }
+}
+@-webkit-keyframes change {
 	0%{
         opacity: 0;
     }
