--- a/qingming2017/css/index.css
+++ b/qingming2017/css/index.css
@@ -13,6 +13,10 @@ body,html {
 #cnzz_stat_icon_1261564228{
     display: none;
 }
+@font-face {
+    font-family: FZSXSLKJW-GB1-0;
+    src: url(font.TTF);
+}
 @media screen and (max-width: 320px) {
     body{font-size: 14px;}
 }
@@ -71,7 +75,8 @@ body,html {
 .platform {
     padding: .6rem .15rem 0;
     width: 100%;
-    height: 2.8rem
+    height: 2.8rem;
+    box-sizing: border-box;
 }
 
 .platform label {
@@ -153,11 +158,117 @@ body,html {
     overflow: hidden;
 }
 .page1 {
-    width: 7.5rem;
+    width: 100%;
     height: 13.34rem;
     background: url(../img/BG-1@2x.jpg) no-repeat;
     background-size: 7.5rem 13.34rem;
     background-position: 50%;
+}
+.page1 .rain {
+    position: absolute;
+    top: 0.2rem;
+    left: 50%;
+    width: 0.33rem;
+    height: 1.44rem;
+    background: url(../img/rain@2x.png) no-repeat;
+    background-size: 0.33rem 1.44rem;
+    background-position: 50%;
+    /*background-color: red;*/
+    -webkit-animation: down 2.5s cubic-bezier(0.6, 0.04, 0.98, 0.335) infinite;
+    animation: down 2.5s cubic-bezier(0.6, 0.04, 0.98, 0.335) infinite; 
+    /*transition-timing-function: cubic-bezier(0.6, 0.04, 0.98, 0.335);
+    -webkit-transition-timing-function: cubic-bezier(0.6, 0.04, 0.98, 0.335);*/
+}
+@-webkit-keyframes down {
+    0%{
+        top: 0.2rem;
+        left: 50%;
+    }
+    100%{
+        top: 7rem;
+        left: 5%;
+    }
+}
+@keyframes down {
+    0%{
+        top: 0.2rem;
+        left: 50%;
+    }
+    100%{
+        top: 7rem;
+        left: 5%;
+    }
+}
+.page1 .rain1 {
+    position: absolute;
+    top: 0.5rem;
+    left: 65%;
+    width: 0.5rem;
+    height: 1.73rem;
+    background: url(../img/rain@3x.png) no-repeat;
+    background-size: 0.5rem 1.73rem;
+    background-position: 50%;
+    /*background-color: red;*/
+    -webkit-animation: down1 3.5s cubic-bezier(0.6, 0.04, 0.98, 0.335) infinite;
+    animation: down1 3.5s cubic-bezier(0.6, 0.04, 0.98, 0.335) infinite; 
+    /*transition-timing-function: cubic-bezier(0.6, 0.04, 0.98, 0.335);
+    -webkit-transition-timing-function: cubic-bezier(0.6, 0.04, 0.98, 0.335);*/
+}
+@-webkit-keyframes down1 {
+    0%{
+        top: 0.5rem;
+        left: 65%;
+    }
+    100%{
+        top: 8rem;
+        left: 10%;
+    }
+}
+@keyframes down1 {
+    0%{
+        top: 0.5rem;
+        left: 65%;
+    }
+    100%{
+        top: 8rem;
+        left: 10%;
+    }
+}
+
+.page1 .rain2 {
+    position: absolute;
+    top: 3rem;
+    left: 75%;
+    width: 0.5rem;
+    height: 1.73rem;
+    background: url(../img/rain@3x.png) no-repeat;
+    background-size: 0.5rem 1.73rem;
+    background-position: 50%;
+    /*background-color: red;*/
+    -webkit-animation: down2 4s cubic-bezier(0.6, 0.04, 0.98, 0.335) infinite;
+    animation: down2 4s cubic-bezier(0.6, 0.04, 0.98, 0.335) infinite; 
+    /*transition-timing-function: cubic-bezier(0.6, 0.04, 0.98, 0.335);
+    -webkit-transition-timing-function: cubic-bezier(0.6, 0.04, 0.98, 0.335);*/
+}
+@-webkit-keyframes down2 {
+    0%{
+        top: 3rem;
+        left: 75%;
+    }
+    100%{
+        top: 9rem;
+        left: 10%;
+    }
+}
+@keyframes down2 {
+    0%{
+        top: 3rem;
+        left: 75%;
+    }
+    100%{
+        top: 9rem;
+        left: 10%;
+    }
 }
 
 .page1 .center {
@@ -295,10 +406,4 @@ body,html {
     width: 100%;
     height: 1.5rem;
     background-color: #a7a7a7; 
-}
-
-
-div {
-  -webkit-transition: all 600ms cubic-bezier(0.6, 0.04, 0.98, 0.335);
-  transition: all 600ms cubic-bezier(0.6, 0.04, 0.98, 0.335); 
 }
