--- a/guyu2017/css/index.css
+++ b/guyu2017/css/index.css
@@ -12,7 +12,7 @@ body,html {
     -webkit-tap-highlight-color:rgba(0,0,0,0);
     background: url(../img/bg.jpg) no-repeat;
     background-size: 7.5rem auto;
-    background-position-y: -64px;
+    background-position: 50% -64px;
     -webkit-touch-callout: none;
 }
 #cnzz_stat_icon_1261564228{
@@ -232,17 +232,15 @@ body,html {
     background: url(../img/homebtn.png) no-repeat;
     background-size: 6.1rem 1.28rem;
     background-position: 50%;
-    /*box-shadow: inset 0px -12px 0 0 rgba(204, 52, 181,0.61);
-    border-radius: 60px;
-    background-image: linear-gradient(342deg, #efc533), linear-gradient(342deg, #fa9d9d, #f97e8b);*/
 }
 .page .icon {
     width: 100%;
-    height: 2.4rem;
+    height: 1rem;
     display: flex;
     display: -webkit-flex;    
     justify-content: center;
     align-items: center;
+    margin-top: 0.48rem;
 }
 .page .icon img {
     width: 0.88rem;
@@ -267,8 +265,8 @@ body,html {
 }
 .page .bird {
     position: absolute;
-    top: 0.85rem;
-    left: 6rem;
+    top: 3rem;
+    left: 4.9rem;
     width: 0.96rem;
     height: 0.96rem;
     display: none;
@@ -284,7 +282,7 @@ body,html {
 
 .page1 .top1 {
     width: 100%;
-    height: 8.7rem;
+    height: 9rem;
     display: flex;
     display: -webkit-flex;
     justify-content: center;
@@ -306,14 +304,11 @@ body,html {
     width: 5.84rem;
     height: 8rem;
 }
-.page1 .results1 {
-    width: 5.84rem;
-    height: 8rem;
-}
 
 .shadow2 {
     position: absolute;
     left: 100%;
+    top: 0.5rem;
     width: 100%;
     height: 8.5rem;
     background: url(../img/shadow.png) no-repeat;
@@ -323,16 +318,15 @@ body,html {
     display: -webkit-flex;
     justify-content: center;
     align-items: center;
-    z-index: 5;
+    /*z-index: 5;*/
 }
 .page1 .longpress {
     width: 100%;
-    height: 0.4rem;
+    height: 0.5rem;
     display: flex;
     display: -webkit-flex;    
     justify-content: center;
-    align-items: center;
-    margin-top: --8px;
+    align-items: flex-start;
 }
 .page1 .longpress img {
     width: 4.86rem;
@@ -372,12 +366,10 @@ body,html {
 }
 
 .tree {
-    position: absolute;
-    right: 0;
-    top: 10.8rem;
     width: 100%;
     height: 1.06rem;
     background: url(../img/tree.png) no-repeat;
     background-size: 6.98rem 1.06rem;
     background-position:  right;
 }
+
