--- a/pay/index.css
+++ b/pay/index.css
@@ -204,7 +204,7 @@ a {
 
 #today .data {
 	width: 6.9rem;
-	height: 1.25rem;
+	height: 60px;
 	 margin: 0.35rem auto; 
 	 display: flex; 
 	 justify-content: space-between; 
@@ -212,8 +212,8 @@ a {
 		 /* overflow: hidden;  */
 }
 #today .data .opa {
-	width: 1.18rem;
-	height: 1.18rem;
+	width: 59px;
+	height: 59px;
 	border-radius: 10px;
 	border: solid 1px rgba(0, 0, 0, 0.1);
 	position: absolute;
@@ -221,9 +221,9 @@ a {
 	top: 0;
 }
 #today .data .yj {
-	width: 1.2rem;
-	height: 1.2rem;
-	border: 0.5px solid #fff;
+	width: 60px;
+	height: 60px;
+	/* border: 0.5px solid #fff; */
 	border-radius: 10px;
 	overflow: hidden;
 }
@@ -241,29 +241,29 @@ a {
 	z-index: 10;
 }
 #today .data .hot img{
-	width: 0.3rem;
-	height: 0.3rem;
+	width: 15px;
+	height: 15px;
 	/* border: 1px solid #999; */
 }
 #today .data img {
-	width: 1.2rem;
-	height: 1.2rem;
+	width: 60px;
+	height: 60px;
 	align-self: center;
 }
 #today .data .desc {
-	width: 3.95rem;
+	/* width: 3.95rem; */
+	width: 56%;
+	height: 60px;
+	 display: flex;
+	flex-direction: column;
+	justify-content: space-around; 
+	/* display: table-cell;
+	vertical-align: center; */
 }
-#today .data .bt {
-	white-space: nowrap;  
-	overflow: hidden;  
-	text-overflow: ellipsis; 
-	font-size: 0.34rem;
-	color: #333;
-	/* margin-bottom: 2px; */
-	/* font-weight: 200; */
-}
+
 #today .data p {
-	font-size: 0.26rem;
+	  /* align-self: center;   */
+	font-size: 13px;
 	text-overflow: -o-ellipsis-lastline;  
 	overflow: hidden;  
 	text-overflow: ellipsis;  
@@ -271,6 +271,17 @@ a {
 	-webkit-line-clamp: 2;  
 	-webkit-box-orient: vertical; 
 	color: #999;
+	 /* line-height: 17.5px;  */
+	  /* height: 17.5px; */
+}
+#today .data .bt {
+	white-space: nowrap;  
+	overflow: hidden;  
+	text-overflow: ellipsis; 
+	font-size: 17px;
+	color: #333;
+	/* margin-bottom: 2px; */
+	/* font-weight: 200; */
 }
 #today .data button {
 	align-self: center;
@@ -281,25 +292,33 @@ a {
 	height: 0.56rem;
 	font-size: 15px;
 	color: #fff;
-	  /* margin-left: -8px;   */
+	   margin-left: 10px;   
 }
 
-#today a hr {
-	width: 78%;
+#today a .hr {
+	width: 79.5%;
 	float: right; 
-	margin-top: -0.15rem;
-	border-color: #eaeaea; 
-	opacity: 0.2;
+	margin-top: -10px;
+	height: 0.5px;
+	border: 0.5px solid rgba(0, 0, 0, 0.1);
+	border-left: none;
+	border-right: none;
+	border-bottom: none;
+	/* align-self: center; */
 }
 #align {
 	width: 6.9rem;
-	border-color: #eaeaea;
 	margin: 30px 0 8px 0;
 	opacity: 0.2;	
+	height: 0.5px;
+	border: 0.5px solid rgba(0, 0, 0, 0.3);
+	border-left: none;
+	border-right: none;
+	border-bottom: none;
 }
 
 #today .more {
-	margin: 0.26rem 0 0.1rem 0;
+	margin: 26px 0 26px 0;
 }
 #today .more button {
 	border: none;	 
@@ -312,7 +331,8 @@ a {
 	display: flex;
 	justify-content: space-between;
 	opacity: 0.2;
-	margin: 40px 0 25px;
+	margin: 30px 0 30px;
+	font-size: 13px;
 }
 .pull .left {
 	width: 2.4rem;
