--- a/pay/index.css
+++ b/pay/index.css
@@ -192,10 +192,10 @@ a {
 
 #today {
 	width: 6.9rem;
-	margin: 0.3rem 0.3rem;
+	margin: 15px 15px;
 }
 #today .title {
-	margin: 0.26rem 0 0.26rem 0;
+	margin: 13px 0 13px 0;
 	font-size: 20px;
 	color: #333;
 	font-weight: 600;
@@ -205,17 +205,42 @@ a {
 #today .data {
 	width: 6.9rem;
 	height: 60px;
-	 margin: 0.35rem auto; 
-	 display: flex; 
+	 margin: 15px auto; 
+	 /* display: flex; 
+	  display: -webkit-flex;
 	 justify-content: space-between; 
+	  -webkit-box-pack:space-between; */
 	  position: relative;
-		 /* overflow: hidden;  */
+	/* overflow: hidden;  */
+	display: box;              /* OLD - Android 4.4- */  
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */  
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */  
+    display: -ms-flexbox;      /* TWEENER - IE 10 */  
+    display: -webkit-flex;     /* NEW - Chrome */  
+	display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */  
+	/* 09版 */  
+    -webkit-box-pack: space-between;  
+    /* 12版 */  
+    -webkit-justify-content: space-between;  
+    -moz-justify-content: space-between;  
+    -ms-justify-content: space-between;  
+    -o-justify-content: space-between;  
+	justify-content: space-between; 
+	-webkit-box-orient: horizontal ;   
+	/* 09版 */  
+    -webkit-box-align: center;  
+    /* 12版 */  
+    -webkit-align-items: center;  
+    -moz-align-items: center;  
+    -ms-align-items: center;  
+    -o-align-items: center;  
+    align-items: center;  	
 }
 #today .data .opa {
-	width: 59px;
-	height: 59px;
+	width: 58px;
+	height: 58px;
 	border-radius: 10px;
-	border: solid 1px rgba(0, 0, 0, 0.1);
+	border: 1px solid rgba(0, 0, 0, 0.1);
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -235,10 +260,36 @@ a {
 	/* height: 15px; */
 	border-radius: 50%;
 	  background-color:  #ffcf4d;  
-	display: flex;
-	justify-content: center;
+	/* display: flex;
+	display: -webkit-flex; */
+	/* justify-content: center;
+	  -webkit-box-pack:center;	
 	align-items: center;
+	-webkit-box-align: center; */
+	/* 09版 */  
+    -webkit-box-align: center;  
+    /* 12版 */  
+    -webkit-align-items: center;  
+    -moz-align-items: center;  
+    -ms-align-items: center;  
+    -o-align-items: center;  
+    align-items: center;  	
 	z-index: 10;
+	display: box;              /* OLD - Android 4.4- */  
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */  
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */  
+    display: -ms-flexbox;      /* TWEENER - IE 10 */  
+    display: -webkit-flex;     /* NEW - Chrome */  
+	display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */  
+	/* 09版 */  
+    -webkit-box-pack: center;  
+    /* 12版 */  
+    -webkit-justify-content: center;  
+    -moz-justify-content: center;  
+    -ms-justify-content: center;  
+    -o-justify-content: center;  
+	justify-content: center; 
+	-webkit-box-orient: horizontal ;   
 }
 #today .data .hot img{
 	width: 15px;
@@ -250,17 +301,44 @@ a {
 	height: 60px;
 	align-self: center;
 }
-#today .data .desc {
-	/* width: 3.95rem; */
-	width: 56%;
+   /* #today .data .desc {
+	width: 54%;
 	height: 60px;
+	max-height: 60px;
 	 display: flex;
+	  display: -webkit-flex;
 	flex-direction: column;
+	-webkit-flex-direction: column;	
 	justify-content: space-around; 
-	/* display: table-cell;
-	vertical-align: center; */
-}
-
+	  -webkit-box-pack:space-around;		
+}    */
+  #today .data .desc {
+	width: 54%;
+	height: 60px;
+	max-height: 60px;
+	display: box;              /* OLD - Android 4.4- */  
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */  
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */  
+    display: -ms-flexbox;      /* TWEENER - IE 10 */  
+    display: -webkit-flex;     /* NEW - Chrome */  
+	display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */  
+	/* 09版 */  
+    -webkit-box-pack: space-around;  
+    /* 12版 */  
+    -webkit-justify-content: space-around;  
+    -moz-justify-content: space-around;  
+    -ms-justify-content: space-around;  
+    -o-justify-content: space-around;  
+	justify-content: space-around; 
+	-webkit-box-orient: vertical;  
+    /* 12版 */  
+    -webkit-flex-direction: column;  
+    -moz-flex-direction: column;  
+    -ms-flex-direction: column;  
+    -o-flex-direction: column;  
+	flex-direction: column;  
+	
+}  
 #today .data p {
 	  /* align-self: center;   */
 	font-size: 13px;
@@ -284,21 +362,31 @@ a {
 	/* font-weight: 200; */
 }
 #today .data button {
-	align-self: center;
+	/* align-self: center; */
+	/* line-height: 60px; */
 	border:  none;
-	border-radius: 50px;
+	border-radius: 25px;
 	background-color: #36c3ff;
-	width: 1.2rem;
-	height: 0.56rem;
+	width: 60px;
+	height: 28px;
 	font-size: 15px;
 	color: #fff;
 	   margin-left: 10px;   
+		  font-weight: bold;
+			/* 09版 */  
+    -webkit-box-align: center;  
+    /* 12版 */  
+    -webkit-align-items: center;  
+    -moz-align-items: center;  
+    -ms-align-items: center;  
+    -o-align-items: center;  
+    align-items: center;  	
 }
 
 #today a .hr {
-	width: 79.5%;
+	width: 78.5%;
 	float: right; 
-	margin-top: -10px;
+	margin-top: -5px;
 	height: 0.5px;
 	border: 0.5px solid rgba(0, 0, 0, 0.1);
 	border-left: none;
@@ -318,7 +406,7 @@ a {
 }
 
 #today .more {
-	margin: 26px 0 26px 0;
+	margin: 22.5px 0 22.5px 0;
 }
 #today .more button {
 	border: none;	 
@@ -329,13 +417,15 @@ a {
 }
 #today .pull {
 	display: flex;
+	display: -webkit-flex;
 	justify-content: space-between;
+	  -webkit-box-pack:space-between;			
 	opacity: 0.2;
-	margin: 30px 0 30px;
+	margin: 30px 0 15px;
 	font-size: 13px;
 }
 .pull .left {
-	width: 2.4rem;
+	width: 110px;
 	height: 0.5px;
 	border: 0.5px solid rgba(0, 0, 0, 0.3);
 	border-left: none;
@@ -344,7 +434,7 @@ a {
 	align-self: center;
 }
 .pull .right {
-	width: 2.4rem;
+	width: 110px;
 	height: 0.5px;
 	border: 0.5px solid rgba(0, 0, 0, 0.3);
 	border-left: none;
