--- a/topic/index.css
+++ b/topic/index.css
@@ -2,14 +2,14 @@
     margin: 0;
     padding: 0;
 }
-html,body {
+
+body {
     font-size: 16px;  
     box-sizing:border-box;
     width: 100%;    
     height: 100%; 
-    /* overflow: auto; */
+    overflow: auto;
     -webkit-overflow-scrolling:touch; 
-    overflow-x: hidden;    
     overflow-y: scroll;    
     -webkit-text-size-adjust:none;    
     background-color: rgb(41, 33, 66);
@@ -18,7 +18,10 @@ html,body {
 body {
     color: white;
 }
-.content {
+#cnzz_stat_icon_1261564228{
+    display: none;
+}
+.content,a {
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -147,12 +150,36 @@ body {
     -ms-align-items: center;  
     -o-align-items: center;  
     align-items: center;  
+    position: relative;
+    /* -webkit-filter: blur(2px);
+    -ms-filter: blur(2px);   
+    filter: blur(2px);  */
+}
+.problem img {
+    position: absolute;
+    width: 100%;
+    height: 150px;
+    left: 0;
+    top: 0;
+    -webkit-filter: blur(2px);
+    filter: blur(2px);
+    z-index: 999;
+}
+.shadow {
+    width: 100%;
+    height: 153px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 9998;
 }
 .problem p {
     width: calc(100vw - 36px - 37px);
     margin: 0 auto;
     color: white;
     font-size: 20px;
+    z-index: 9999;
 }
 .problem p img {
     width: 20px;
@@ -213,6 +240,7 @@ body {
     border-radius:50%;
     overflow: hidden;
 }
+
 .content .user_head img {
     width: 30px;
     height: 30px;
@@ -326,20 +354,16 @@ body {
     -webkit-line-clamp: 2;  
     -webkit-box-orient: vertical;
 }
-.llsBanner {
+#llsBanner {
+    display: block;
     position: fixed;
     bottom: 0;
-    /* left: 0;
-    right: 0; */
-    /* top: 0; */
     width: 100%;
     height: 60px;
-    /* background: url('./img/download-pic@3x.jpg') no-repeat;
-    background-size: cover; */
     z-index: 9999;
 }   
 
-.llsBanner img {
+#llsBanner img {
     width: 100%;
     height: 60px;
 }
